--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           alt="Attack on Titan"
         />
         <div class="content">
-          <h2>Sobre a loja</h2>
+          <h2>Sobre o site</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis non
             nulla sit nobis fugiat amet recusandae vero quia nisi pariatur
